Fix Code Mergered